fixed contact form for easier readability, edited product-detail to be larger when selected, added padding to header/ footer

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
 header, footer {
     background: #333a40;
     color: white;
+    padding: 20px 10px;
 }
 
 ul {
@@ -77,4 +78,36 @@ img {
 .button:last-of-type {
     background: #0e69e9;
     color: white;
+}
+
+/* Product detail page */
+.product-detail {
+    width: 660px;
+}
+
+.product-detail img {
+    max-width: 50%;
+    float: left;
+}
+
+/* Contact us */
+
+form {
+    padding: 10px;
+    margin: 10px 0;
+    width: 600px;
+}
+
+form > div {
+    margin: 10px 0;
+}
+
+.inline label {
+    display: inline-block;
+    width: 100px;
+}
+
+input[type="text"], input[type="email"], textarea {
+    padding: 10px;
+    width: 400px;
 }
